<resources>
    <string name="app_name">desafio01-MA171622-MG171623</string>
    <string name="add">Add</string>
    <string name="get">Get</string>
    <string name="user">Usuario</string>
    <string name="login">Inicia sesion</string>
    <string name="password">Contraseña</string>
    <string name="create_account">Crear cuenta</string>
    <string name="register_account">Registrarse</string>
    <string name="auth_error">Error de autenticacion</string>
    <string name="unexpected_error">Error de registro  (es probable que el nombre de usuario ya este en uso)</string>
    <string name="e1_title">Ejercicio 1</string>
    <string name="a_value">a</string>
    <string name="b_value">b</string>
    <string name="calculate">Calcular</string>
    <string name="c_value">c</string>
    <string name="e2_title">Ejercicio 2</string>
    <string name="enter_candidates">Ingrese candidatos</string>
    <string name="e3_title">Ejercicio 3</string>
    <string name="first_employee">Primer empleado</string>
    <string name="names">Nombres</string>
    <string name="lastnames">Apellidos</string>
    <string name="salary">Salario</string>
    <string name="position">Cargo</string>
    <string name="second_employee">Segundo empleado</string>
    <string name="third_employee">Tercer empleado</string>
    <string name="calc_salary">Calcular salario</string>
    <string name="ok">Aceptar</string>
    <string name="employee">Empleado: %1$s</string>
    <string name="isss">ISSS: %1$s</string>
    <string name="afp">AFP: %1$s</string>
    <string name="rent">Renta: %1$s</string>
    <string name="liquid">Sueldo líquido: %1$s</string>
    <string name="bonus">Bono: %1$s</string>
    <string name="max">Empleado con mayor sueldo: %1$s</string>
    <string name="min">Empleado con menor sueldo: %1$s</string>
    <string name="over300">Empleados con sueldo sobre $300: %1$d</string>
    <string name="hours">Horas trabajadas</string>
</resources>