<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/accent"
    tools:context=".ui.MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="14dp"
        app:cardUseCompatPadding="true"
        android:layout_marginHorizontal="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/e1_title"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>
            <EditText
                android:id="@+id/a_value"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:maxLines="1"
                android:background="@drawable/rounded_edit_text"
                android:importantForAutofill="no"
                android:paddingHorizontal="10dp"
                android:hint="@string/a_value"
                android:inputType="numberSigned|numberDecimal"/>
            <EditText
                android:id="@+id/b_value"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:maxLines="1"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edit_text"
                android:importantForAutofill="no"
                android:paddingHorizontal="10dp"
                android:hint="@string/b_value"
                android:inputType="numberSigned|numberDecimal" />
            <EditText
                android:id="@+id/c_value"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:maxLines="1"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edit_text"
                android:importantForAutofill="no"
                android:paddingHorizontal="10dp"
                android:hint="@string/c_value"
                android:inputType="numberSigned|numberDecimal" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/calc_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cornerRadius="14dp"
                android:text="@string/calculate"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>