<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/accent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="14dp"
                app:cardUseCompatPadding="true"
                android:layout_marginHorizontal="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/first_employee"
                        android:textAlignment="center"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="8dp"/>
                    <EditText
                        android:id="@+id/name1"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:maxLines="1"
                        android:background="@drawable/rounded_edit_text"
                        android:importantForAutofill="no"
                        android:paddingHorizontal="10dp"
                        android:hint="@string/names"
                        android:inputType="text"/>
                    <EditText
                        android:id="@+id/lastname1"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:maxLines="1"
                        android:background="@drawable/rounded_edit_text"
                        android:importantForAutofill="no"
                        android:paddingHorizontal="10dp"
                        android:hint="@string/lastnames"
                        android:inputType="text"/>
                    <EditText
                        android:id="@+id/hour1"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:maxLines="1"
                        android:background="@drawable/rounded_edit_text"
                        android:importantForAutofill="no"
                        android:paddingHorizontal="10dp"
                        android:hint="@string/hours"
                        android:inputType="number"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/position"
                        android:textSize="15sp"
                        android:layout_marginTop="8dp"/>
                    <Spinner
                        android:id="@+id/position1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="20dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="14dp"
                app:cardUseCompatPadding="true"
                android:layout_marginHorizontal="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/second_employee"
                        android:textAlignment="center"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="8dp"/>
                    <EditText
                        android:id="@+id/name2"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:maxLines="1"
                        android:background="@drawable/rounded_edit_text"
                        android:importantForAutofill="no"
                        android:paddingHorizontal="10dp"
                        android:hint="@string/names"
                        android:inputType="text"/>
                    <EditText
                        android:id="@+id/lastname2"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:maxLines="1"
                        android:background="@drawable/rounded_edit_text"
                        android:importantForAutofill="no"
                        android:paddingHorizontal="10dp"
                        android:hint="@string/lastnames"
                        android:inputType="text"/>
                    <EditText
                        android:id="@+id/hour2"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:maxLines="1"
                        android:background="@drawable/rounded_edit_text"
                        android:importantForAutofill="no"
                        android:paddingHorizontal="10dp"
                        android:hint="@string/hours"
                        android:inputType="number"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/position"
                        android:textSize="15sp"
                        android:layout_marginTop="8dp"/>
                    <Spinner
                        android:id="@+id/position2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="20dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="14dp"
                app:cardUseCompatPadding="true"
                android:layout_marginHorizontal="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/third_employee"
                        android:textAlignment="center"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="8dp"/>
                    <EditText
                        android:id="@+id/name3"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:maxLines="1"
                        android:background="@drawable/rounded_edit_text"
                        android:importantForAutofill="no"
                        android:paddingHorizontal="10dp"
                        android:hint="@string/names"
                        android:inputType="text"/>
                    <EditText
                        android:id="@+id/lastname3"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:maxLines="1"
                        android:background="@drawable/rounded_edit_text"
                        android:importantForAutofill="no"
                        android:paddingHorizontal="10dp"
                        android:hint="@string/lastnames"
                        android:inputType="text"/>
                    <EditText
                        android:id="@+id/hour3"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:maxLines="1"
                        android:background="@drawable/rounded_edit_text"
                        android:importantForAutofill="no"
                        android:paddingHorizontal="10dp"
                        android:hint="@string/hours"
                        android:inputType="number"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/position"
                        android:textSize="15sp"
                        android:layout_marginTop="8dp"/>
                    <Spinner
                        android:id="@+id/position3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="20dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/salary_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cornerRadius="14dp"
                android:backgroundTint="@color/primary"
                android:layout_marginHorizontal="16dp"
                android:text="@string/calc_salary"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>